Test mobile chrome alignment fix.

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -2,7 +2,7 @@ nav {
 	text-align: center;
 }
 .nav-arrow {
-	margin: 0 0 1.5em 0;
+	margin: 0 0 2em 0;
 	outline: none;
 	line-height: .45em;
 	font-family: 'Droid Sans Mono';
